--- a/MyApplication/app/src/main/res/layout/activity_main3.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main3.xml
@@ -7,20 +7,35 @@
     tools:context="com.example.tharindu.myapplication.Main3Activity">
 
     <Button
+        android:id="@+id/button"
+        android:layout_width="191dp"
+        android:layout_height="44dp"
+        android:text="Settings"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnShops" />
+
+    <Button
         android:id="@+id/btnList"
         android:layout_width="188dp"
         android:layout_height="38dp"
         android:text="Cart"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="145dp" />
+        android:layout_marginTop="97dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvIShopM"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btnShops"
         android:layout_width="188dp"
         android:layout_height="38dp"
         android:text="Shops"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="216dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnList" />
 
     <TextView
         android:id="@+id/tvIShopM"
@@ -42,15 +57,24 @@
         android:layout_width="189dp"
         android:layout_height="38dp"
         android:text="Log Out"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="343dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="19dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnProfile"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.125" />
 
     <Button
-        android:id="@+id/btnSetings"
+        android:id="@+id/btnProfile"
         android:layout_width="191dp"
         android:layout_height="44dp"
-        android:text="Settings"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="278dp" />
+        android:text="Profile"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="26dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.502" />
 
 </android.support.constraint.ConstraintLayout>
