--- a/MyApplication/app/src/main/res/layout/cart_activity.xml
+++ b/MyApplication/app/src/main/res/layout/cart_activity.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tharindu.myapplication.Main4Activity">
+    tools:context="com.example.tharindu.myapplication.CartActivity">
 
 
 
     <TextView
-        android:id="@+id/tvIShopM"
+        android:id="@+id/tvLogo"
         android:layout_width="136dp"
         android:layout_height="31dp"
         android:layout_marginTop="16dp"
@@ -21,17 +21,25 @@
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.035"
+        app:layout_constraintHorizontal_bias="0.512" />
 
 
     <Button
-        android:id="@+id/btnViewExitingList"
+        android:id="@+id/btnViewLists"
         android:layout_width="208dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="182dp"
         android:text="View Lists"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="182dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.036" />
 
     <Button
         android:id="@+id/btnEditList"
@@ -40,27 +48,39 @@
         android:text="Edit List"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="271dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="259dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.511" />
 
     <Button
         android:id="@+id/btnBack"
         android:layout_width="120dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="61dp"
         android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="208dp"
-        android:layout_height="48dp"
-        android:text="Create New List"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="108dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.888" />
+
+    <Button
+        android:id="@+id/btnCreateNewList"
+        android:layout_width="208dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="92dp"
+        android:text="Create New List"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.063" />
 </android.support.constraint.ConstraintLayout>
 
 
