--- a/MyApplication/app/src/main/res/layout/profile_activity.xml
+++ b/MyApplication/app/src/main/res/layout/profile_activity.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tharindu.myapplication.Main6Activity">
+    tools:context="com.example.tharindu.myapplication.profileActivity">
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btnBack"
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:layout_marginBottom="29dp"
@@ -15,8 +15,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnChangePassword" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnChangePassword"
@@ -26,8 +27,11 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="349dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.009" />
 
     <Button
         android:id="@+id/btnReviews"
@@ -38,7 +42,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="209dp" />
+        android:layout_marginTop="209dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnEdit"
@@ -48,6 +55,9 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="29dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnReviews" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="278dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
