--- a/MyApplication/app/src/main/res/layout/shops_activity.xml
+++ b/MyApplication/app/src/main/res/layout/shops_activity.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tharindu.myapplication.Main5Activity">
+    tools:context="com.example.tharindu.myapplication.ShopsActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvLogo"
         android:layout_width="136dp"
         android:layout_height="31dp"
         android:background="@android:color/holo_blue_bright"
@@ -19,7 +19,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="27dp" />
+        android:layout_marginTop="31dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnRateShop"
@@ -28,8 +31,11 @@
         android:text="Rate Shop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="53dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnNewItems" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.421" />
 
     <Button
         android:id="@+id/btnShopDetails"
@@ -39,8 +45,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="51dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnRateShop" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="284dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnBack"
@@ -49,34 +58,25 @@
         android:text="BACK"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="72dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnShopDetails"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.854" />
 
     <Button
-        android:id="@+id/btnNewItems"
+        android:id="@+id/btnAvailabilities"
         android:layout_width="217dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="112dp"
         android:text="Availabilities"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.502" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
 
 
-<TextView
-android:id="@+id/tvIShopM"
-android:layout_width="136dp"
-android:layout_height="31dp"
-android:background="@android:color/holo_blue_bright"
-android:text="iShopping"
-
-android:textAlignment="center"
-android:textColor="@color/colorPrimary"
-android:textSize="20dp"
-tools:layout_editor_absoluteX="133dp"
-tools:layout_editor_absoluteY="16dp" />
