--- a/MyApplication/app/src/main/res/layout/main_activity.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity.xml
@@ -40,7 +40,8 @@
         android:layout_marginTop="97dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.011"
+        app:layout_constraintHorizontal_bias="0.519" />
 
     <Button
         android:id="@+id/btnLogIn"
