--- a/MyApplication/app/src/main/res/layout/main_activity.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity.xml
@@ -73,18 +73,18 @@
         android:id="@+id/tvAreYouNotRegistered"
         android:layout_width="228dp"
         android:layout_height="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="350dp"
         android:background="@android:color/transparent"
-        android:text="Are you not registered?"
+        android:text="Forgot Password ?"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="17dp
 "
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
