--- a/MyApplication/app/src/main/res/layout/main_activity.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity.xml
@@ -11,20 +11,20 @@
         android:id="@+id/tvLogo"
         android:layout_width="136dp"
         android:layout_height="31dp"
-        android:background="@android:color/holo_blue_bright"
-        android:text="iShopping"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
 
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="29dp"
+        android:background="@android:color/holo_blue_bright"
+        android:text="iShop"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="29dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
