--- a/MyApplication/app/src/main/res/layout/shops_activity.xml
+++ b/MyApplication/app/src/main/res/layout/shops_activity.xml
@@ -10,18 +10,18 @@
         android:id="@+id/tvLogo"
         android:layout_width="136dp"
         android:layout_height="31dp"
-        android:background="@android:color/holo_blue_bright"
-        android:text="iShopping"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="31dp"
 
+        android:background="@android:color/holo_blue_bright"
+        android:text="iShop"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
